--- a/_config.yml
+++ b/_config.yml
@@ -30,9 +30,49 @@ twitter_username: ChrisCScott
 github_username:  jekyll
 
 # Build settings
-theme: minima
+remote_theme: "chriscscott/www-theme-freelancer"
+# theme: minima
 plugins:
   - jekyll-feed
+
+# -------------------------
+# Freelancer theme settings:
+# Site settings:
+keywords: ""
+skills: "Dad - Lawyer - Curious"
+meta_author: Scott Christopher
+# Color settings (hex-codes without the leading hash-tag)
+color:
+  primary: 18bc9c #80B3FF
+  primary-rgb: "24,288,156" #"128,179,255"
+  secondary: 2c3e50 #FD6E8A
+  secondary-dark: 233140 #A2122F
+# Footer settings
+footer:
+  copyright: Christopher Scott
+  location: Location
+  social: Around the Web
+  credits: Contact
+# Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
+social:
+  - title: facebook
+    url: https://www.facebook.com/ccscott
+  - title: twitter
+    url: https://twitter.com/ChrisCScott
+  - title: mastodon
+    url: https://mstdn.ca/@ChrisCScott
+  - title: reddit
+    url: https://www.reddit.com/user/ChrisCScott
+  - title: linkedin
+    url: https://www.linkedin.com/in/christophercscott/
+  - title: github
+    url: https://github.com/ChrisCScott
+# Location (add as many lines as necessary)
+address:
+  - line: Vancouver, Canada
+# Credits content
+credits: '<a href="mailto:christopher@christopherscott.ca">Get in touch</a>'
+# -------------------------
 
 # Exclude from processing.
 # The following items will not be processed, by default.
