--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,7 @@ twitter:
   card: summary
 facebook:
   publisher: https://www.facebook.com/ccscott
+  admins: 696111476140
 
 ## Footer content:
 footer_links:
